<resources>
    <string name="app_name">JdLogin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="register">Register</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="age">Age</string>
    <string name="lastname">Lastname</string>
    <string name="name">Name</string>
    <string name="save">save</string>
    <string name="log_out">log out</string>
    <string name="google">GOOGLE</string>
    <string name="icon_google">icon google</string>
    <string name="user">User</string>
    <string name="icon_facebook">icon Facebook</string>
    <string name="icon_phone">Icon Phone</string>
    <string name="verify_phone_number">Verify mobile</string>
    <string name="a_verification_code_will_be_sent_to_your_number">A verification code will be sent to your number.</string>
    <string name="phone">phone</string>
    <string name="send_code">Send Code</string>
    <string name="please_wait_while_we_automatically_verify_your_number_if_auto_verification_is_not_working_you_can_enter_the_code_received_as_well">Please wait while we automatically verify your number. If auto verification is not working you can enter the code received as well.</string>
    <string name="verification_code">Verification Code</string>
    <string name="verify">VERIFY</string>
    <string name="phone_auth">Phone Auth</string>
    <string name="intercorp_logo">Intercorp Logo</string>
    <string name="process_text_fail">Please Enter Your Country code and Phone Number</string>
    <string name="OTP_sent">OTP has been Sent</string>
    <string name="facebook_app_id">2569738449823189</string>
    <string name="fb_login_protocol_scheme">fb2569738449823189</string>



</resources>